tests/stmt/tforloop_underscore.nim
discard """
  errormsg: "the special identifier '_' is ignored in declarations and cannot be used"
"""

for _ in ["a"]:
  echo _
